--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -23,9 +23,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run Prisma db:push
+      - name: Run migrations
         run: pnpm db:migrate
         env:
-          PLANETSCALE_HOST: ${{ secrets.PLANETSCALE_HOST }}
-          PLANETSCALE_PASSWORD: ${{ secrets.PLANETSCALE_PASSWORD_PREVIEW }}
-          PLANETSCALE_USERNAME: ${{ secrets.PLANETSCALE_USERNAME_PREVIEW }}
+          DATABASE_URL: ${{ secrets.PREVIEW_DATABASE_URL }}
