--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.1.0",
     "@planetscale/database": "^1.18.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-kit": "^0.23.0",
     "drizzle-orm": "^0.32.0",
     "geist": "^1.3.0",
+    "lucide-react": "^0.408.0",
     "next": "15.0.0-rc.0",
     "next-auth": "^4.24.7",
     "react": "19.0.0-rc-85acf2d195-20240711",
     "react-dom": "19.0.0-rc-85acf2d195-20240711",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
