--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.1.0",
+    "@hookform/resolvers": "^3.9.0",
     "@planetscale/database": "^1.18.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -30,9 +32,10 @@
     "next-auth": "^4.24.7",
     "react": "19.0.0-rc-85acf2d195-20240711",
     "react-dom": "19.0.0-rc-85acf2d195-20240711",
+    "react-hook-form": "^7.52.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
